--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@
 
 .header-section {
     background-color: #213C53;
+    padding-bottom: 40px;
 }
 
 .menu-nav {
@@ -54,3 +55,39 @@
 .menu {
     
 }
+
+.btnin {
+    text-decoration: none;
+    color: #dcf6fdd8;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 500;
+}
+
+.btnup {
+    text-decoration: none;
+    color: #212529;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 500;
+    background-color: #F9BF3B;
+}
+
+.main-label {
+    color: #DCF6FD;
+    font-family: 'Rubik', sans-serif;
+    font-size: 60px;
+
+}
+
+
+.main-text {
+    color: #DCF6FD;
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+}
+
+.img-promo {
+
+    width: 301px;
+    height: 150px;
+}
+
