--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,13 @@
+/* COMMON */
+body {
+	min-width: 360px;
+	font-family: 'Poppins', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+	font-family: 'Rubik', sans-serif;
+}
+
 .red {
     background-color: red;
 }
@@ -11,15 +21,14 @@
     background-color: blueviolet;
 }
 
-.header{
+/* HEADER */
+.header {
     padding-top: 25px;
-}
-
-.header-section {
+    padding-bottom: 25px;
     background-color: #213C53;
-    padding-bottom: 40px;
 }
 
+/* menu */
 .menu-nav {
     
         display: flex;
@@ -34,10 +43,7 @@
 .menu li{
     display: inline-block;
     padding: 0px 20px;
-    
-    
-    
-    
+
 }
 
 .menu li a {
@@ -50,11 +56,12 @@
 }
 
 .headercontent {
-    margin-top: 30px;
+    padding-top: 30px;
 }
 .menu {
     
 }
+
 
 .btnin {
     text-decoration: none;
@@ -70,6 +77,13 @@
     font-weight: 500;
     background-color: #F9BF3B;
 }
+
+.promo {
+    background-color: #213C53;
+    padding-bottom: 40px;
+}
+
+
 
 .main-label {
     color: #DCF6FD;
